<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.firebaseChat.ui.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        tools:context="com.firebaseChat.ui.views.fragments.LoginFragment">

        <ImageView
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_app_icon"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/ivAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_icon" />

        <TextView
            android:textColor="@color/color_toolbar"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:padding="4dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:text="@string/group_chat"

            app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/base_color"
            android:textSize="16sp"
            android:text="@string/please_enter_your_name"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:hint="@string/user_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={loginViewModel.editTextValue}"

            app:layout_constraintTop_toBottomOf="@id/tvUserId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.button.MaterialButton
            android:text="@string/submit"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/base_color"
            android:onClick="@{()-> loginViewModel.storeUserProfileInFirebaseDatabase()}"

            app:layout_constraintTop_toBottomOf="@id/etUserId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>